--- a/index.html
+++ b/index.html
@@ -245,10 +245,6 @@
       "Nunca imaginei que conseguiria gerar ideias tão criativas e poderosas com tão pouco esforço."
       <strong>– Camila T.</strong>
     </div>
-  <div class="depoimento">
-      "Antes eu perdia horas criando conteúdos, agora faço tudo em minutos. Vale cada centavo!"
-      <strong>– Andre P.</strong>
-    </div>
 </div>
 </section>
 
@@ -256,7 +252,7 @@
 <div id="notifications-container"></div>
 
 <footer>
-  <p>© 2025 – 1.800 Prompts Secretos do ChatGPT | Todos os direitos reservados</p>
+  <p>© 2025 – Infinitcast | Todos os direitos reservados</p>
 </footer>
 
 <script>
@@ -347,3 +343,4 @@
 
 </body>
 </html>
+
