--- a/index.html
+++ b/index.html
@@ -247,7 +247,11 @@
     </div>
 </div>
 </section>
-
+<div class="cta">   
+    <a href="https://infinitcast.shop/product/175545914159104899199204490694">
+      <button>👉 Garantir Meu Acesso Agora</button>
+    </a>
+  </div>
 <!-- Notificações -->
 <div id="notifications-container"></div>
 
@@ -343,5 +347,6 @@
 
 </body>
 </html>
+
 
 
